# twitter-analysis

./: .gitignore  README.md  config.yaml  setup.cfg  twitter-analysis.py  visualize.ipynb
twitter_analysis/: database.py  main.py  sentiment.py  twitter.py
