[metadata]
name = twitter-analysis
version = 0.0.3
url = https://github.com/brsc2909/twitter-analysis
author = Brendan Scullion
author_email = brsc2909@gmail.com
description = some description
long_description = file: README.md
classifiers =
    Development Status :: 5 - Development/Stable
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
packages = find:
install_requires =
    pylint
    black
    requests
    pyyaml
    pyrate-limiter
    transformers
    torch
    plotly
    datasets
    notebook
    kaleido
    nltk
    twarc
    geostring
    pycountry
    
# You may or may not need this so remove if necessary
[options.entry_points]
console_scripts =
    twitter-analysis = twitter_analysis.main:main
